testing/tests/ui/unnamed_template_argument.rs
use askama::Template;

#[derive(Template)]
#[template(ext = "txt", "unnamed")]
struct UnnamedTemplateArgument;

fn main() {
}
